<resources>
    <string name="app_name">UrbanLab</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="btnLogin">Autorization</string>
    <string name="btncamera">Camera</string>
    <string name="btnmap">Map</string>
    <string name="btnBack">Back</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">Login</string>
    <string name="btn_link_signup">Signup</string>
    <string name="signup_input_name">Name</string>
    <string name="signup_input_password">Password</string>
    <string name="signup_input_layout_email">Email</string>
    <string name="signup_input_layout_age">Your Age</string>
    <string name="hint_dob">Dob</string>
    <string name="hint_gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_link_login">Login</string>
    <string name="facebook_app_id">205538013529415</string>
    <string name="loginButton">FBbtn</string>
    <string name="postStatusUpdateButton">Post Status Update</string>
    <string name="postPhotoButton">Post Photo</string>
    <string name="getInterestsButton">Get Interests !!</string>


    <string name="cancelled">Cancelled</string>
    <string name="permission_not_granted">Unable to perform selected action because permissions were not granted.</string>
    <string name="ok">OK</string>
    <string name="hello_user">Hello %1$s!</string>
    <string name="success">Success</string>
    <string name="successfully_posted_post">Post ID: %1$s</string>
    <string name="error">Error</string>
    <string name="status_update">Updating status for %1$s at %2$s</string>
    <string name="photo_post">Photo Post</string>
    <string name="you_picked">You picked:</string>
    <string name="no_friends_selected">&lt;No friends selected&gt;</string>
    <string name="no_place_selected">&lt;No place selected&gt;</string>
    <string name="pick_seattle_place">Pick a Seattle Place</string>
    <string name="app_id">205538013529415</string>
    <string name="exception">Exception: %1$s</string>
    <string name="btnFacebook">Excep</string>
    <string name="title_activity_maps">Map</string>

</resources>




