<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.rodion.urbanlab.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btnBack"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btncamera"
            android:layout_alignBottom="@+id/btncamera"
            android:layout_alignParentEnd="true"
            android:text="@string/btnBack" />

        <Button
            android:id="@+id/btncamera"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnLogin"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="150dp"
            android:text="@string/btncamera" />

        <Button
            android:id="@+id/btnmap"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnBack"
            android:layout_alignBottom="@+id/btnBack"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom"
            android:text="Map"
            tools:layout_editor_absoluteX="133dp"
            tools:layout_editor_absoluteY="0dp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:layout_toEndOf="@+id/btncamera"
            android:text="@string/btnLogin" />
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
